WIP: Remove UnknownSchemaNode
Remove all mentions of UnknownSchemaNode, updating documentation
accordingly.

JIRA: YANGTOOLS-1771
Change-Id: Idb5fce9cddafe4bfe8f12f6947a5a155060c6b20
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>